# ipywidgets

./: .bowerrc  .eslintrc.json  .gitignore  .lintstagedrc  .mailmap  .npmignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  RELEASE.md  __init__.py  application.ipynb  bower.json  build_css.js  dev-install.sh  gamepad.py  gulpfile.js  install.py  lerna.json  menu.ipynb  package.json  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tsconfig.typedoc.json  tsconfigbase.json  tslint.json  typedoc.json
.binder/: README  environment.yml  postBuild  requirements.txt
.github/: dependabot.yml  lock.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom_widget_issue.md  documentation.md  feature_request.md
.github/workflows/: answered.yml  binder-on-pr.yml  build.yml  check-release.yml  devinstall.yml  lint.yml  lock.yml  packaging.yml  pytest.yml  pythonpackage.yml  testdocs.yml  testjs.yml  testpython.yml  tests.yml  testspec.yml
docs/: Makefile  Readme.md  build-local.sh  build-rtd.sh  conf.py  environment.yml  index.rst  jupyter-lite.json  make.bat  package.json  requirements.txt  webpack.config.js
docs/lite/: jupyter_lite_config.json
docs/source/: changelog.md  changelog.rst  (+27 more)
embed-jupyter-widgets/: package.json  webpack.config.js
examples/: Beat Frequencies.ipynb  Controller.ipynb  Custom Widget - Hello World.ipynb  Date Picker Widget.ipynb  Exploring Graphs.ipynb  Export As (nbconvert).ipynb  Factoring.ipynb  File Upload Widget.ipynb  Image Browser.ipynb  Image Processing.ipynb  Index.ipynb  Lorenz Differential Equations.ipynb  Nonblocking Console.ipynb  Using Interact.ipynb  Variable Inspector.ipynb  Widget Basics.ipynb  Widget Events.ipynb  Widget Layout.ipynb  Widget List.ipynb  Widget Low Level.ipynb  Widget Styling.ipynb
ipython_widgets/: __init__.py  jstest.py
ipywidgets/: .jshintrc  .npmignore  __init__.py  _version.py  bower.json  build_css.js  copy_version.js  embed.py  index.js  install.py  jstest.py  karma.conf.js  package.json  state.schema.json
jupyter-js-widgets/: .bowerrc  .gitignore  .npmignore  README.md  bower.json  build_css.js  index.js  karma.conf.js  package.json  webpack.config.js
jupyter-js-widgets-nbextension/: package.json  setup.py
jupyter-widget-schema/: README.md  index.js  package.json  setup.py
jupyter-widgets-base/: .jshintrc  package.json
jupyter-widgets-controls/: .gitignore  README.md  package.json
jupyter-widgets-htmlmanager/: package.json  webpack.config.js
jupyter-widgets-output/: package.json
jupyter-widgets-schema/: README.md  index.js  jupyterwidgetmodels.md  messages.md  modelstate.md  package.json
jupyter_widgets/: MANIFEST.in  package-lock.json  package.json  setup.py  webpack.config.js
jupyter_widgets_frontend/: package.json  setup.py
jupyterlab_widgets/: .eslintrc.js  .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
labextension/: README.md  externals.js  package.json  setup.py  webpack.config.js
nbextension/: gamepad.js
python/ipywidgets/: README.md  pyproject.toml  setup.cfg  setup.py
python/ipywidgets/ipywidgets/: __init__.py  _version.py  embed.py
python/ipywidgets/ipywidgets/tests/: test_embed.py
python/ipywidgets/ipywidgets/widgets/: __init__.py  docutils.py  domwidget.py  interaction.py  trait_types.py  utils.py  valuewidget.py  widget.py  widget_bool.py  widget_box.py  widget_button.py  widget_color.py  widget_controller.py  widget_core.py  widget_date.py  widget_datetime.py  widget_description.py  widget_dragdrop.py  widget_fieldset.py  widget_float.py  widget_int.py  widget_layout.py  widget_link.py  widget_media.py  widget_output.py  widget_selection.py  widget_selectioncontainer.py  widget_string.py  widget_style.py  widget_tagsinput.py  widget_templates.py  widget_time.py  widget_upload.py
python/ipywidgets/ipywidgets/widgets/tests/: test_button.py  test_datetime_serializers.py  test_docutils.py  test_interaction.py  test_link.py  test_selectioncontainer.py  test_send_state.py  test_set_state.py  test_set_state_noecho.py  test_slider.py  test_traits.py  test_utils.py  test_widget.py  test_widget_box.py  test_widget_button.py  test_widget_datetime.py  test_widget_float.py  test_widget_image.py  test_widget_naive_datetime.py  test_widget_output.py  test_widget_selection.py  test_widget_string.py  test_widget_templates.py  test_widget_time.py  test_widget_upload.py  utils.py
python/jupyterlab_widgets/: .cookiecutter_replay  .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
python/jupyterlab_widgets/jupyterlab_widgets/: __init__.py  _version.py
python/jupyterlab_widgets/src/: index.ts  manager.ts  output.ts  plugin.ts  renderer.ts
python/widgetsnbextension/: MANIFEST.in  README.md  amd-public-path.js  package.json  pyproject.toml  setup.cfg  setup.py  webpack.config.js
python/widgetsnbextension/src/: embed_widgets.js  extension.js  manager.js  save_state.js  widget_output.js
python/widgetsnbextension/widgetsnbextension/: __init__.py  _version.py
scripts/: bump-version.py  hashes  hashes_fedora  milestone_check.py  package-integrity.js  release_template.txt  strip_examples.py  strip_notebooks.py  travis_before_install_py.sh  travis_install_js.sh  travis_install_py.sh  travis_script_doc.sh  travis_script_js.sh  travis_script_py.sh  travis_script_spec.sh  update-dependency.js
tests/: test_boolstyle.ipynb  test_borders.ipynb  test_buttonstyle.ipynb  test_focus.ipynb  test_imagemap.ipynb  test_sanitizer.ipynb  test_tabbable.ipynb  test_tabindex.ipynb  test_textstyle.ipynb  test_tooltip.ipynb
ui-tests/: .yarnrc  galata-config.json  jupyter_server_config.py  package-lock.json  package.json  playwright.config.js
widgetslabextension/: .gitignore  package.json  setup.py
widgetsnbextension/: COPYING.md  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  webpack.config.js  widgetsnbextension.json
(+700 files in other folders)
