[metadata]
name = ipywidgets
version = attr: ipywidgets._version.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
license_file = LICENSE
description = Jupyter interactive widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = http://jupyter.org
keywords = Interactive, Interpreter, Shell, Web, ipython, widgets, Jupyter
platforms = Linux, Mac OS X, Windows
license = BSD 3-Clause License
classifiers =
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
  Framework :: Jupyter

[options]
python_requires = >=3.6

zip_safe = False
# include_package_data = True
packages = find:

# Requiring nbformat to specify bugfix version which is not required by
# notebook - perhaps not needed anymore?
install_requires =
  ipykernel>=4.5.1
  ipython>=6.1.0
  traitlets>=4.3.1
  nbformat>=4.2.0
  widgetsnbextension~=4.0a0
  jupyterlab_widgets~=2.0a0

[options.extras_require]
test =
  pytest>=3.6.0
  pytest-cov

[options.package_data]
ipywidgets =
  state.schema.json
  view.schema.json

# Test data needs to be packaged until tests are moved out of module
ipywidgets.widgets.tests =
  data/jupyter-logo-transparent.png
