[metadata]
name = jupyterlab_widgets
version = attr: jupyterlab_widgets._version.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter-widgets/ipywidgets
description = Jupyter interactive widgets for JupyterLab
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = BSD-3-Clause
platforms = Linux, Mac OS X, Windows
keywords = Interactive, Interpreter, Shell, Web, notebook, widgets, Jupyter, JupyterLab, JupyterLab3
classifiers =
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3 :: Only
  Framework :: Jupyter
  Framework :: Jupyter :: JupyterLab
  Framework :: Jupyter :: JupyterLab :: 3
  Framework :: Jupyter :: JupyterLab :: Extensions
  Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
python_requires = >=3.7
zip_safe=False
include_package_data = True
packages = find:
