[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["jupyter_packaging~=0.10,<2"]

[tool.jupyter-packaging.options]
skip-if-exists = ["widgetnbextension/static/extension.js"]
ensured-targets = ["widgetnbextension/static/extension.js"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["widgetnbextension/static/**", "yarn.lock", ".*", "package-lock.json"]

[tool.tbump.version]
current = "4.0.0a4"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "widgetsnbextension/_version.py"

[tool.jupyter-releaser]
skip = ["check-links"]
