[metadata]
name = widgetsnbextension
version = attr: widgetsnbextension._version.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = http://jupyter.org
description = Jupyter interactive widgets for Jupyter Notebook
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = BSD 3-Clause License
platforms = Linux, Mac OS X, Windows
keywords = Interactive, Interpreter, Shell, Web, notebook, widgets, Jupyter
classifiers =
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3 :: Only
  Framework :: Jupyter

[options]
python_requires = >=3.7
zip_safe=False
include_package_data = True
packages = find:

[options.package_data]
widgetsnbextension =
  widgetsnbextension/static/extension.js
